--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <option value="eur">EUR</option>
         <option value="som">SOM</option>
         <option value="aud">AUD</option>
-        <option value="byn">BYN</option>
+        <option value="byn">BYN</option> 
         <option value="krw">KRW</option>
         <option value="aed">AED</option>
         <option value="egp">EGP</option>
@@ -32,7 +32,9 @@
         <option value="uah">UAH</option>
     </select>
 </div>
+    <div class="result-out">
     <span>result:</span>
+</div>
     <div class="js-output"> </div>
  </div>
 </div>
